err/floraconcierge-client.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/floraconcierge'...
Listing './lib/python3.5/site-packages/floraconcierge/apiauth'...
Compiling './lib/python3.5/site-packages/floraconcierge/apiauth/backends.py'...
***   File "./lib/python3.5/site-packages/floraconcierge/apiauth/backends.py", line 23
    except ResultDefaultError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/floraconcierge/apiauth/migrations'...
Listing './lib/python3.5/site-packages/floraconcierge/client'...
Compiling './lib/python3.5/site-packages/floraconcierge/client/__init__.py'...
***   File "./lib/python3.5/site-packages/floraconcierge/client/__init__.py", line 86
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/floraconcierge/mapping'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/api'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/api/result'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/api/result/order'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/api/validation'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/mixins'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/mixins/model'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/mixins/model/shop'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/geo'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/inflect'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/shop'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/shop/order'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/shop/order/reasons'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/shop/product'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/shop/promo'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/user'...
Listing './lib/python3.5/site-packages/floraconcierge/mapping/model/user/social'...
Compiling './lib/python3.5/site-packages/floraconcierge/middleware.py'...
***   File "./lib/python3.5/site-packages/floraconcierge/middleware.py", line 31
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/floraconcierge/shortcuts'...
Listing './lib/python3.5/site-packages/floraconcierge/templates'...
Listing './lib/python3.5/site-packages/floraconcierge/templates/floraconcierge'...
Listing './lib/python3.5/site-packages/floraconcierge_client-0.7.52.egg-info'...
Listing './lib/python3.5/site-packages/ordered_set-2.0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
